[package]
name = "tss-sapi"
version = "0.0.1"
authors = ["Doug Goldstein <doug@starlab.io>"]
license = "MIT/Apache-2.0"
description = "Bindings to the TPM 2.0 TSS SAPI"
repository = "https://github.com/starlab-io/tss-sapi.git"
homepage = "https://github.com/starlab-io/tss-sapi"
documentation = "https://docs.rs/tss-sapi"
keywords = ["tpm", "tss", "sapi"]
build = "build.rs"
links = "sapi"

[dependencies]
error-chain = "0.10.0"
log = "0.3"

#[build-dependencies]
#bindgen = "=0.25.3"

[dev-dependencies]
pretty_env_logger = "0.1.1"

[features]

default = ["tcti-device", "tcti-socket"]

# links to the tcti-device library
tcti-device = []

# links to the tcti-socket library
tcti-socket = []
